[tool.poetry]
name = "pyrawr"
version = "0.1.0"
description = "Python wrapper around the ThermoRawFileParser command line interface"
authors = ["Ralf Gabriels <ralf@gabriels.dev>"]
readme = "README.md"
repository = "https://github.com/ralfg/pyrawr"
documentation = "https://pyrawr.readthedocs.io/"
keywords = ["ThermoRawFileParser", "mass spectrometry", "proteomics", "raw"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
semver = ">=2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
